# git-autobot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  NEXT_STEPS.md  README.md  RepistoryDashboard_TD.txt  RepositoryCard_TD.txt  TASKS.md  docker-compose.dev.yml  docker-compose.yml  docker-run.sh  entrypoint.sh  fastapi_app.py  git_github_starter.py  main.py  pyproject.toml  requirements.txt  start-dev.sh  test_file.txt  test_git_github_starter.py
.github/workflows/: ci.yml
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  next.config.ts  repos
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/repositories/: page.tsx
frontend/src/app/repositories/[name]/: RepositoryDashboardClient.tsx  page.tsx
frontend/src/app/repositories/[name]/readme/: page.tsx
frontend/src/components/: ErrorMessage.tsx  Navigation.tsx  RepositoryCard.tsx  TokenForm.tsx
frontend/src/lib/: api.ts
frontend/src/types/: repository.ts
git_autobot/: __main__.py
git_autobot/commands/: __init__.py  git_ops.py  repo.py
git_autobot/core/: __init__.py  config.py  git_ops.py
justkeephiking/: index.html  script.js  styles.css
models/: __init__.py  schemas.py  status.py
routes/: ai.py  branches.py  ci.py  issues.py  local.py  meta.py  notes.py  pulls.py  repos.py  snippets.py
services/: ai_service.py  auth.py  ci_service.py  config.py  git_service.py  github_service.py  health.py  notes_service.py  snippet_service.py  state_store.py  task_service.py
tests/: test.txt  test_fastapi_app.py  test_status.py
