[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-autobot"
version = "0.2.0"
description = "A Python toolkit for automating Git and GitHub operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "pygithub>=2.6.1",
    "typer>=0.12.3",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
git-autobot = "git_autobot.__main__:app"

[tool.setuptools.packages.find]
include = ["git_autobot*"]
exclude = ["tmp*", "tests*"]
